# enterprise-architecture-platform

./: .dockerignore  .editorconfig  .gitignore  .issue-resolver.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.ci.yml  docker-compose.full.yml  docker-compose.prod.yml
.ai/deepreview/gitee-1-2026-07-12-173156/: input.txt
.ai/deepreview/gitee-1-2026-07-12-173655/: review-architecture.md  review-compatibility.md  review-correctness.md  review-docs.md  review-maintainability.md  review-performance.md  review-security.md  synthesis.md  validated-architecture.md  validated-compatibility.md  validated-correctness.md  validated-docs.md  validated-maintainability.md  validated-performance.md  validated-security.md
.gitee/workflows/: docker-build.yml
.github/workflows/: auto-merge.yml  ci-cd-acr.yml  ci-cd-swr.yml  deploy-aliyun.yml  issue-resolver.yml  monthly-cleanup.yml  pr-auto-fix.yml  pr-ci.yml  pr-review.yml  vulnerability-scan.yml
backend/: Dockerfile  README.en.md  README.md  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  litestream.yml
backend/config/: default.toml  local.toml
backend/crates/server/: Cargo.toml
backend/crates/server/src/: api_doc.rs  app.rs  config.rs  graphql.rs  main.rs  middleware.rs  state.rs
backend/crates/server/src/ai/: backend.rs  dto.rs  handlers.rs  mod.rs
backend/crates/user-management/: Cargo.toml
backend/crates/user-management/src/application/: login.rs  mod.rs  oauth.rs  register.rs  token.rs
backend/crates/user-management/src/domain/auth/: entity.rs  repository.rs
backend/crates/user-management/src/domain/user/: entity.rs  mod.rs  repository.rs  value_object.rs
backend/crates/user-management/src/infrastructure/http/: handlers.rs  routes.rs
backend/crates/user-management/src/infrastructure/persistence/: mod.rs  user_repo.rs
backend/crates/user-management/src/infrastructure/persistence/entities/: mod.rs  oauth_authorization_code.rs  organization.rs  refresh_token.rs  user.rs
backend/data/: platform.db
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250101_000002_create_refresh_tokens.rs  m20250101_000004_create_business_capabilities.rs  m20250101_000006_create_process_steps.rs  m20250101_000007_create_value_streams.rs  m20250101_000010_create_stage_capabilities.rs  m20250101_000011_add_logical_id.rs  m20250101_000012_add_description_to_value_streams.rs  m20250101_000012_create_organizations.rs  m20250101_000013_add_created_at_index_to_capabilities.rs  m20250101_000014_add_status_to_capabilities.rs  m20250101_000015_add_description_to_organizations.rs  m20250101_000016_add_pipeline_test_1784711733_to_organizations.rs  m20250101_000017_add_pipeline_test_1784712959_to_organizations.rs  m20250101_000018_add_pipeline_test_1784714989_to_organizations.rs  m20250101_000019_add_pipeline_test_1784735899_to_organizations.rs  m20250101_000020_add_pipeline_test_1784772794_to_organizations.rs  m20250101_000021_add_pipeline_test_1784793339_to_organizations.rs  m20250101_000022_add_pipeline_test_1784796635_to_organizations.rs  m20250101_000023_add_pipeline_test_1784801567_to_organizations.rs  m20250101_000024_add_pipeline_test_1784802862_to_organizations.rs  m20250101_000025_add_pipeline_test_1784857379_to_organizations.rs  m20250101_000025_add_pipeline_test_1784864177_to_organizations.rs  (+4 more)
config/: default.toml  local.toml
crates/business-architecture/: Cargo.toml
crates/business-architecture/src/domain/capability/: entity.rs
crates/business-architecture/src/domain/value_stream/: entity.rs
crates/business-architecture/src/infrastructure/persistence/: value_stream_repo.rs
crates/business-architecture/src/infrastructure/persistence/entities/: mod.rs  value_stream.rs
crates/server/: Cargo.toml
crates/shared-common/: Cargo.toml
crates/shared-common/src/: enums.rs
deploy/: pod.yml
frontend/: .env.production  Dockerfile  README.en.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_PLAN_COVERAGE.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  run-tests.sh  test-dev.sh  tsconfig.app.json  verify-tests.js  vite.config.ts
frontend/specs/: eap-test-plan.md
frontend/src/: App.tsx  index.css  route-guards.tsx  router.tsx
frontend/tests/: README.md  basic-setup.spec.ts
migration/src/: m20250101_000001_create_users.rs  m20250101_000003_create_oauth_codes.rs  m20250101_000005_create_business_processes.rs  m20250101_000008_create_value_stream_stages.rs  m20250101_000009_create_capability_processes.rs  m20250101_000011_add_logical_id.rs
scripts/: deploy-backend.sh  eap-autodeploy.service  eap-autodeploy.sh  eap-autodeploy.timer
tests/: smoke_test.rs
(+105 files in other folders)
