[package]
name = "business-architecture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-common.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
semver.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true
async-graphql.workspace = true
utoipa.workspace = true
