[package]
name = "shared-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
validator.workspace = true
async-trait.workspace = true
utoipa.workspace = true
