[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared-common.workspace = true
user-management.workspace = true
business-architecture.workspace = true
migration = { path = "../../migration" }
sea-orm.workspace = true
sea-orm-migration.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
seaography.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-axum.workspace = true
moka.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
futures-util = "0.3"
