[package]
name = "user-management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-common.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rsa.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
url.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true
async-graphql.workspace = true
utoipa.workspace = true
